Fix issue where header is not visible on mobile view.

--- a/app/assets/stylesheets/partials/mobile.css.sass
+++ b/app/assets/stylesheets/partials/mobile.css.sass
@@ -1,6 +1,5 @@
 @media all and (max-width: 800px)
   .site-header, .site-footer
-    display: none
   .post
     &:target
       &:before
